~ offers activity design

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="depth">Depth</string>
     <string name="sc_name">Sc Name</string>
     <string name="order">Order</string>
+    <string name="orders">Orders</string>
     <string name="scclass">Class</string>
     <string name="reviews">Reviews</string>
     <string name="thanks_for_your_answer">Thanks for your answer!</string>
