--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -558,4 +558,5 @@
     <string name="write_review_tutorial"><![CDATA[<b>Write</b> a few words about you dive]]></string>
     <string name="see_list_tutorial"><![CDATA[<b>See</b> all the spots listed for you]]></string>
     <string name="cant_connect_to_google">Can\'t connect to google services. Please, try again</string>
+    <string name="all_details">All details</string>
 </resources>
