+ vide as backgrond in login activity

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -560,4 +560,5 @@
     <string name="see_list_tutorial"><![CDATA[<b>See</b> all the spots listed for you]]></string>
     <string name="cant_connect_to_google">Can\'t connect to google services. Please, try again</string>
     <string name="all_details">All details</string>
+    <string name="vido_resource_pattern">android.resource://%s/%d</string>
 </resources>
