--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -245,7 +245,7 @@
     <string name="send">SEND</string>
     <string name="write_a_review">e.g. Got an unforgettable experience. The dive spot is absolutely amazing with colorful reefs and lots of fish. We were lucky to spot manta rays and tiny shrimps.</string>
     <string name="start_process_register_for_gcm">Registering for Google services</string>
-    <string name="please_zoom_in_to_request_dive_spots">Please zoom in to request dive spots</string>
+    <string name="please_zoom_in_to_request_dive_spots">Please zoom in to show more spots</string>
     <string name="start_process_register_for_ddscanner">Registering for DDScanner services</string>
     <string name="add_divespot_s_photo">Add divespot\'s photo</string>
     <string name="current">Current</string>
