--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -562,4 +562,5 @@
     <string name="all_details">All details</string>
     <string name="vido_resource_pattern">android.resource://%s/%d</string>
     <string name="share_app">Share app</string>
+    <string name="your_android_version_is_not_supported_n_please_update_to_4_4_or_later">Your Android version is not supported.\nPlease update to 4.4 or later</string>
 </resources>
