~ text in remove instructor dialog

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -471,7 +471,7 @@
     <string name="add_language_subtitle">It’s applied to name and description</string>
     <string name="add_photo_sealife">Add photo</string>
     <string name="please_choose_right_loction">Please, choose the right location of the dive center</string>
-    <string name="remove_instructor_confriamtion">Remove this instructor from your list?</string>
+    <string name="remove_instructor_confriamtion">Do you really want to remove \"%1$s\" from your instructors?</string>
     <string name="single_review_pattern">%1$s review</string>
     <string name="not_single_review_pattern">%1$s reviews</string>
     <string name="pattern_more_countries">+ %1$S</string>
