--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -577,4 +577,5 @@
     <string name="view_profile">View profile</string>
     <string name="success_booking_dialog_title">Gongrats</string>
     <string name="success_booking_dialog_text">booking successful</string>
+    <string name="message_error_length">Message should be at least 10 characters</string>
 </resources>
