--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -578,4 +578,6 @@
     <string name="success_booking_dialog_title">Thanks, buddy!</string>
     <string name="success_booking_dialog_text">Your message has been sent. Have a nice dive and don’t forget to drop a line about your experience!</string>
     <string name="message_error_length">Message should contain more that 10 characters</string>
+    <string name="no_dive_centers">No dive centers</string>
+    <string name="booking_will_be_soon">Booking will be available as soon as any dive center claim to operate here</string>
 </resources>
