--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -596,4 +596,11 @@
     <string name="divecenter_type_dc">Dive center</string>
     <string name="divecenter_type_dive_shop">Dive center / Dive shop</string>
     <string name="al_brands_pattern">SHOW ALL BRANDS (%1$s)</string>
+    <string name="onboarding_search">Search dive spots by location or name</string>
+    <string name="onboarding_filter">Filter them by object, level and etc.</string>
+    <string name="onboarding_map_list">Switch between map and list modes to check spots</string>
+    <string name="onboarding_go_to_phuket">Now let\'s check out Phuket - one of our favorite dive places</string>
+    <string name="onboarding_select_pin">Select a dive spot pin on the map</string>
+    <string name="onboarding_tap_on_infowindow">Tap on spots infowindow</string>
+    <string name="onboarding_book">Like this spot? Check dive centers that can get you there and book a dive!</string>
 </resources>
