+ default images in products && prices

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -614,4 +614,5 @@
     <string name="dives_pattern">dives</string>
     <string name="product_photos">Product photos</string>
     <string name="show_less">Show less</string>
+    <string name="equipment_rental">Equipment rental</string>
 </resources>
