--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -609,7 +609,7 @@
     <string name="initiary">Initiary</string>
     <string name="available">Available</string>
     <string name="meetin_point">Meeting point</string>
-    <string name="inslusions">Inslusions</string>
+    <string name="inslusions">Inclusions</string>
     <string name="book_now_btn">BOOK NOW</string>
     <string name="dives_pattern">dives</string>
     <string name="product_photos">Product photos</string>
