--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -615,4 +615,5 @@
     <string name="product_photos">Product photos</string>
     <string name="show_less">Show less</string>
     <string name="equipment_rental">Equipment rental</string>
+    <string name="schedule">Schedule</string>
 </resources>
