+ fun dives in die center profile fragments

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -598,6 +598,7 @@
     <string name="divecenter_type_dive_shop">Dive center / Dive shop</string>
     <string name="al_brands_pattern">SHOW ALL BRANDS (%1$s)</string>
     <string name="al_products_pattern">ALL DAILY TOURS (%1$s)</string>
+    <string name="al_fun_dives_pattern">ALL FUN DIVES (%1$d)</string>
     <string name="onboarding_search">Search dive spots by location or name</string>
     <string name="onboarding_filter">Filter them by object, level and etc.</string>
     <string name="onboarding_map_list">Switch between map and list modes to check spots</string>
