~ packages structure && + certificate activity

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -607,7 +607,7 @@
     <string name="onboarding_tap_on_infowindow">Tap on the info window for more details</string>
     <string name="onboarding_book">Tap here to check out the dive centers\' suggestions and book your dive!</string>
     <string name="daily_tours">Daily tours</string>
-    <string name="initiary">Initiary</string>
+    <string name="initiary">Itinerary</string>
     <string name="available">Available</string>
     <string name="meetin_point">Meeting point</string>
     <string name="inslusions">Inclusions</string>
